# Homeworks

./: .gitignore  README.md
.github/workflows/: test.yml
HW1.4(tests)/: CMakeLists.txt  hello.cxx
HW1.4(tests)/lib/: CMakeLists.txt  hello_lib.cxx
HW1.5.3(installation)/: CMakeLists.txt  hello.cxx
HW1.5.3(installation)/lib/: CMakeLists.txt  hello_lib.cxx
HW1.5.3(installation)/lib/install/lib/: hello_lib.hxx
HW2/: CMakeLists.txt
HW2/src/: CMakeLists.txt  main.cpp
HW3/HW3.1_loop/: CMakeLists.txt
HW3/HW3.1_loop/src/: main.cxx
HW3/HW3.2_main.exe-engine.header/: CMakeLists.txt
HW3/HW3.2_main.exe-engine.header/src/: engine.cxx  engine.hxx  main.cxx
HW3/HW3.3_game.exe-engine.lib/: CMakeLists.txt
HW3/HW3.3_game.exe-engine.lib/src/: engine.cxx
HW3/HW3.4_game.lib-engine.exe_hot_swap/: CMakeLists.txt
HW3/HW3.4_game.lib-engine.exe_hot_swap/src/: engine.cxx  engine.hxx  game.cxx  game.hxx
HW4/HW4.1/: CMakeLists.txt
HW4/HW4.1/.cmake/api/v1/reply/: cache-v2-32846b22af33a88b4b07.json  target-main-Debug-353425e1eea900eabcce.json
HW4/HW4.1/src/: canvas.cxx  canvas.hxx  main.cxx
HW4/HW4.2/: CMakeLists.txt
HW4/HW4.2(draw line)/src/: canvas.cxx  line_render.cxx  line_render.hxx  main.cxx
HW4/HW4.2/.cmake/api/v1/reply/: cmakeFiles-v1-8d3a1cf7e91d5674e0c7.json  codemodel-v2-ec613cc0630bf9f934ee.json  index-2021-02-10T09-21-40-0915.json
HW4/HW4.2/src/: canvas.hxx  line_render.cxx  line_render.hxx  main.cxx
HW4/HW4.3(draw triangle)/: CMakeLists.txt
HW4/HW4.3(draw triangle)/src/: canvas.hxx  line_render.cxx  main.cxx  triangle_render.cxx  triangle_render.hxx
